# AT

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  pyproject.toml
docs/: alpaca-eth-agent-plan.md  dashboard.md  hmm-regime-research.md  image_analyzer.md  mt5_chart_replay_workspace.md  mt5_manual_replay.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
indicators/: ATCandleCountdown.ex5  ATCandleCountdown.mq5  README.md
ops/mt5/: ATChartReplayWorkspaceEA.ex5  ATChartReplayWorkspaceEA.mq5  ATManualOrderPadEA.mq5  ATManualReplayTesterEA.ex5  ATManualReplayTesterEA.mq5  V51BridgeEA.mq5  V5BridgeEA.mq5  V60BridgeEA.mq5  V61BridgeEA.mq5
ops/nginx/: at-dashboard.conf
prompts/: v6.0_build.md
scripts/: monitor_v5_1_session.py  run_dashboard.sh  run_dashboard_api.sh  run_dashboard_dev.sh  run_dashboard_web.sh  run_mt5_manual_replay.sh  run_v5_1_mt5.sh  run_v5_mt5.sh  run_v6_0_mt5.sh  run_v6_1_mt5.sh
src/agents/: __init__.py  analyst.py  mt5_position_manager.py  mt5_v51_entry_analyst.py  mt5_v51_position_manager.py  mt5_v60_entry_analyst.py  mt5_v60_position_manager.py  reviewer.py  strategy_advisor.py
src/app/: backtest.py  config.py  discovery_cycle.py  evaluate.py  main.py  mt5_manual_replay.py  review.py  v3_2_research.py  v3_research.py  v4_live.py  v5_1_config.py  v5_1_mt5.py  v5_mt5.py  v6_0_config.py  v6_0_mt5.py  v6_1_config.py  v6_1_mt5.py
src/at_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/control_plane/: models.py
src/dashboard/: __init__.py  app.py
src/dashboard_api/: __init__.py  app.py
src/data/: __init__.py  feature_engine.py  mt5_v51_schemas.py  mt5_v60_schemas.py  schemas.py
src/evaluation/: backtest.py  replay.py  reporting.py  scorer.py
src/execution/: __init__.py  mt5_v51_entry_planner.py  mt5_v51_ticket_registry.py  mt5_v60_entry_planner.py  mt5_v60_immediate_entry.py  mt5_v60_ticket_registry.py  position_tracker.py
src/feedback/: mt5_v51_reflection.py  mt5_v60_reflection.py
src/infra/: openai_responses.py
src/memory/: __init__.py  lessons.py  supabase.py  supabase_mt5_v60.py
src/regime/: hmm.py
src/risk/: __init__.py  mt5_v51_policy.py  mt5_v5_policy.py  mt5_v60_policy.py  policy.py  sizing.py
src/runtime/: context_packet.py  (+7 more)
strategies/: v2.0.md  v2.2.md  v3.0.md  v3.1.md  v5.0.md  v5.1.md
supabase/: config.toml
(+80 files in other folders)
