[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "at-agent"
version = "0.1.0"
description = "Research-phase Alpaca ETH/USD paper trading agent"
readme = "docs/alpaca-eth-agent-plan.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
at-agent = "app.main:main"
at-agent-backtest = "app.backtest:main"
at-agent-review = "app.review:main"
at-agent-evaluate = "app.evaluate:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
